# games2ai

./: .gitignore  CLAUDE.md  README.md  bridge.py  pyproject.toml  requirements.txt  rom_reader.py
src/alttp_assist/: __init__.py  __main__.py  cli.py  constants.py  events.py  game_state.py  map_renderer.py  poller.py  proximity.py  retroarch.py  text.py
src/alttp_assist/rom/: __init__.py  data.py  dialog.py  parser.py  tiles.py
